Refactor index.html, manifest.json, and Wizard component for improved branding and user experience
- Updated index.html to change the application title to 'AICura' and modified theme color and favicon for better branding.
- Enhanced manifest.json with updated application name and added new icon sizes for improved compatibility across devices.
- Refactored Wizard component to support new animations, improved header behavior, and added a progress bar for better navigation feedback.
- Introduced responsive design elements and refined styles for a more cohesive user interface.

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>HealthcareApp</title>
+    <meta name="theme-color" content="#1E293B" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
+    <title>AICura</title>
     <style>
-      /* These styles make the body full-height */
-      html, body { height: 100%; }
-      /* These styles disable body scrolling if you are using <ScrollView> */
-      body { overflow: hidden; }
-      /* These styles make the root element full-height */
-      #root { display: flex; height: 100%; }
+      html, body { 
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      body { 
+        overflow: hidden;
+        background-color: #1E293B;
+      }
+      #root { 
+        display: flex;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
